--- a/scheduleMock.html
+++ b/scheduleMock.html
@@ -12,22 +12,34 @@
         <session class="map"></session>
     </session>
     <session class="shortlists">
-        {{#each shortlists}}
-            <div class="shortlist" shortlistId="{{_id}}">
-                <div class="img" style="{background-image: url('../{{img}}')}"></div>
-                <div class="info">
-                    <h3>{{address}}</h3>
-                    <ul class="sub-info list-inline">
-                        <li><h5>{{price}}</h5>per month</li>
-                        <li><h5>{{beds}}</h5>beds</li>
-                        <li><h5>{{baths}}</h5>baths</li>
-                    </ul>
-                </div>
-            </div>
-        {{/each}}
+        {{> shortlists}}
     </session>
 </template>
 
 <template name="scheduleCalendar">
-    <session class="calendar" id="calendar"></session>
+    <session class="calendar">
+        {{> calendar}}
+        {{> new_event_modal}}
+        {{> event_details}}
+    </session>
+</template>
+
+<template name="shortlists">
+    {{#each shortlists}}
+        {{> shortlist}}
+    {{/each}}
+</template>
+
+<template name="shortlist">
+    <div class="shortlist" id="{{_id}}">
+        <div class="img" style="{background-image: url('../{{img}}')}"></div>
+        <div class="info">
+            <h3>{{address}}</h3>
+            <ul class="sub-info list-inline">
+                <li><h5>{{price}}</h5>per month</li>
+                <li><h5>{{beds}}</h5>beds</li>
+                <li><h5>{{baths}}</h5>baths</li>
+            </ul>
+        </div>
+    </div>
 </template>
